[tool.poetry]
name = "asgi-request-logger"
version = "0.3.2"
description = "A lightweight request logger middleware for ASGI applications"
authors = ["timothy jeong <k.jts8257@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timothy-jeong/asgi-request-logger"
homepage = "https://github.com/timothy-jeong/asgi-request-logger"

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.3"
anyio = "^3.6.2"